@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.66 (gritter) 1/6/06";
+	"@(#)/usr/ucb/otfdump.sl	5.67 (gritter) 1/6/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.66 (gritter) 1/6/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.66 (gritter) 1/6/06";
+static const char sccsid[] USED = "@(#)dpost.sl  5.67 (gritter) 1/6/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.67 (gritter) 1/6/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.66 (gritter) 1/6/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.67 (gritter) 1/6/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.66 (gritter) 1/6/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.67 (gritter) 1/6/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "5.66";
+const char revision[] = "5.67";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -67,11 +67,11 @@ troff.d/dpost.d/dpost_afm.c: * Sccsid @(#)dpost_afm.c	1.2 (gritter) 9/29/05
 troff.d/dpost.d/dpost_draw.c: * Sccsid @(#)dpost_draw.c	1.5 (gritter) 11/28/05
 troff.d/dpost.d/dpost_makedev.c: * Sccsid @(#)dpost_makedev.c	1.1 (gritter) 9/4/05
 troff.d/dpost.d/dpost_otf.c: * Sccsid @(#)dpost_otf.c	1.3 (gritter) 10/13/05
-troff.d/dpost.d/ext.h: * Sccsid @(#)ext.h	1.4 (gritter) 11/29/05
+troff.d/dpost.d/ext.h: * Sccsid @(#)ext.h	1.5 (gritter) 1/6/06
 troff.d/dpost.d/gen.h: * Sccsid @(#)gen.h	1.13 (gritter) 11/29/05
 troff.d/dpost.d/getopt.c: * Sccsid @(#)getopt.c	1.8 (gritter) 8/2/05
 troff.d/dpost.d/glob.c: * Sccsid @(#)glob.c	1.3 (gritter) 8/9/05
-troff.d/dpost.d/misc.c: * Sccsid @(#)misc.c	1.9 (gritter) 11/29/05
+troff.d/dpost.d/misc.c: * Sccsid @(#)misc.c	1.10 (gritter) 1/6/06
 troff.d/dpost.d/path.h: * Sccsid @(#)path.h	1.5 (gritter) 12/18/05
 troff.d/dpost.d/pictures.c: * Sccsid @(#)pictures.c	1.6 (gritter) 11/29/05
 troff.d/dpost.d/ps_include.c: * Sccsid @(#)ps_include.c	1.8 (gritter) 11/29/05
